Program s napojením na Redmine
Signed-off-by: Jan Hamal Dvořák <mordae@anilinux.org>

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -256,7 +256,10 @@
 
 .l-prg__garant-img {
     max-width: 50px;
-    display: inline-block
+    display: inline-block;
+    border-radius: 300px;
+    overflow: hidden;
+    margin-left: 1rem;
 }
 
 
