--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ layout: default
         <div class="my-4">
           {% if page.tags %}
             {% for tag in page.tags %}
-              {% capture tagUrl %}{{ tag | prepend: '/tags/#' | relative_url }}{% endcapture %}
+              {% capture tagUrl %}{{site.tags_path | relative_url}}#{{ tag | slugify: "latin" }}{% endcapture %}
               {% include buttons/basic.html class="btn--grey-125 btn--condensed" cta=tag href=tagUrl %}
             {% endfor %}
           {% endif %}
