--- a/_includes/tagline.html
+++ b/_includes/tagline.html
@@ -1,4 +1,4 @@
-{% if include.tags contains "Osmička" %}
+{% if include.tags contains "Časopis Osmička" %}
   <div class="mb-4">
    {% include buttons/icon.html href="https://www.mesicnikosmicka.cz/" cta="Naše odpověď v časopise Osmička" icon="ico--globe" class="btn--hoveractive btn--to-orange-300" %}
   </div>
