Layout changes in articles

--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -5,6 +5,13 @@ layout: default
 <div class="container container--default pt-8 lg:py-24">
   <section>
     <h1 class="head-alt-md md:head-alt-lg max-w-5xl mb-4">Aktuality se štítkem {{ page.tag }}:</h1>
+    <main class="mt-4">
+      {% include articles/list-responsive.html posts=paginator.posts %}
+    </main>
+    {% if paginator.total_pages > 1 %}
+      {% include articles/pagination.html paginator=paginator %}
+    {% endif %}
+    <h2 class="mt-8 head-alt-base">Další štítky:</h2>
     <div class="inline-block-nogap mt-4">
       {% for item in site.data.tags %}
         {% capture tagUrl %}/aktuality/stitky/{{ item[0] | slugify: "latin" }}/{% endcapture %}
@@ -13,11 +20,5 @@ layout: default
         {% include buttons/basic.html class=btnClass cta=cta href=tagUrl %}
       {% endfor %}
     </div>
-    <main class="mt-4">
-      {% include articles/list-responsive.html posts=paginator.posts %}
-    </main>
-    {% if paginator.total_pages > 1 %}
-      {% include articles/pagination.html paginator=paginator %}
-    {% endif %}
   </section>
 </div>
