--- a/_includes/social-icons.html
+++ b/_includes/social-icons.html
@@ -7,4 +7,4 @@
 {% if include.profiles.redmine %}<a class="social-icon" target="_blank" rel="noreferrer noopener" href="{{ include.profiles.redmine }}"><i class="ico--tasks"></i></a>{% endif %}
 {% if include.profiles.wikipedia %}<a class="social-icon" target="_blank" rel="noreferrer noopener" href="{{ include.profiles.wikipedia }}"><i class="ico--wikipedia"></i></a>{% endif %}
 {% if include.profiles.web %}<a class="social-icon" target="_blank" rel="noreferrer noopener" href="{{ include.profiles.web }}"><i class="ico--globe"></i></a>{% endif %}
-{% if include.profiles.blog %}<a class="social-icon" target="_blank" rel="noreferrer noopener" href="{{ include.profiles.blog }}"><i class="ico--write"></i></a>{% endif %}
+{% if include.profiles.blog %}<a class="social-icon" target="_blank" rel="noreferrer noopener" href="{{ include.profiles.blog }}"><i class="ico--newspaper"></i></a>{% endif %}
