--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,8 +1,13 @@
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" />
+{% if page.mastodon %}
+<script src='/assets/js/mastodon.js'></script>
 <script>
-  window.pirates = window.pirates || {};
-  pirates.priorityStack = [];
+  document.addEventListener("DOMContentLoaded", () => {
+    new Mastodon({ instance: '{{ page.mastodon.instance }}', userId: '{{ page.mastodon.userId }}', limit: '{{ page.mastodon.limit }}'});
+  });
 </script>
-{% if page.fancybox %}
+{% endif %}
+{% if page.fancybox or page.mastodon %}
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
 <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
