Replace forum with instagram

--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" />
+<style type="text/css">
+  .bg-brands-instagram {--bg-opacity:1;background-color:#c13584;background-color:rgba(193,53,132,var(--bg-opacity))}
+</style>
 {% if page.mastodon %}
 <script src='/assets/js/mastodon.js'></script>
 <script>
