--- a/_includes/homepage/news.html
+++ b/_includes/homepage/news.html
@@ -3,6 +3,6 @@
   {% assign posts = site.posts | slice:0,6 %}
   {% include articles/list-responsive.html posts=posts %}
   <nav class="text-center">
-    {% include buttons/icon.html href="/aktuality" cta="Další články" icon="ico--chevron-right" class="text-xl pt-8" rel="next" %}
+    {% include buttons/icon.html href="/aktuality" cta="Další články" icon="ico--chevron-right" class="text-xl py-8" rel="next" %}
   </nav>
 </section>
