--- a/_includes/social-icons.html
+++ b/_includes/social-icons.html
@@ -1,6 +1,6 @@
 {% if include.profiles.facebook %}<a class="social-icon" target="_blank" rel="me noreferrer noopener" href="{{ include.profiles.facebook }}"><i class="ico--xxx bi bi-facebook"></i></a>{% endif %}
 {% if include.profiles.mastodon %}<a class="social-icon" target="_blank" rel="me noreferrer noopener" href="{{ include.profiles.mastodon }}"><i class="ico--xxx bi bi-mastodon"></i></a>{% endif %}
-{% if include.profiles.twitter-x %}<a class="social-icon" target="_blank" rel="me noreferrer noopener" href="{{ include.profiles.twitter-x }}"><i class="ico--twitter-x"></i></a>{% endif %}
+{% if include.profiles.twitter %}<a class="social-icon" target="_blank" rel="me noreferrer noopener" href="{{ include.profiles.twitter }}"><i class="ico--twitter-x"></i></a>{% endif %}
 {% if include.profiles.instagram %}<a class="social-icon" target="_blank" rel="me noreferrer noopener" href="{{ include.profiles.instagram }}"><i class="ico--instagram"></i></a>{% endif %}
 {% if include.profiles.threads %}<a class="social-icon" target="_blank" rel="me noreferrer noopener" href="{{ include.profiles.threads }}"><i class="ico--threads"></i></a>{% endif %}
 {% if include.profiles.tiktok %}<a class="social-icon" target="_blank" rel="me noreferrer noopener" href="{{ include.profiles.tiktok }}"><i class="ico--xxx bi bi-tiktok"></i></a>{% endif %}
