--- a/_includes/right-bar/bar_profile.html
+++ b/_includes/right-bar/bar_profile.html
@@ -29,7 +29,7 @@
   {% if page.funkce-verejne %}
   <div class="mt-4">
     <h6>VEŘEJNÉ FUNKCE</h6>
-    {% for funkce in page.funkce-verejne %}
+    {% for funkce-verejne in page.funkce-verejne %}
       {% include contact-line.html icon="ico--xxx bi bi-rocket-takeoff" caption=funkce-verejne %}
     {% endfor %}
   </div>
