--- a/_includes/right-bar/bar_profile.html
+++ b/_includes/right-bar/bar_profile.html
@@ -42,23 +42,23 @@
     <div class="space-y-4">
       {% if page.mob %}
         <div>
-          <h4>Telefon</h4>
+          <<h1 class="head-alt-2xs">Telefon</h1>
           {% capture href %}tel:{{ page.mob }}{% endcapture %}
           {% include contact-line.html icon="ico--phone" href=href caption=page.mob %}
         </div>
       {% endif %}
       {% if page.mail %}
         <div>
-          <h4>Email</h4>
+          <h1 class="head-alt-2xs">E-mail</h1>
           {% capture href %}mailto:{{ page.mail }}{% endcapture %}
           {% include contact-line.html icon="ico--envelope" href=href caption=page.mail %}
         </div>
       {% endif %}
       {% if page.profiles.odmeny or page.profiles.evidence or page.profiles.report %}
         <div>
-          <h4>Pirátské přehledy</h4>
+          <h1 class="head-alt-sm">Pirátské přehledy/h1>
           {% if page.profiles.kalendar %}{% include contact-line.html icon="ico--calendar" href=page.profiles.kalendar caption="Otevřený kalendář" %}{% endif %}
-          {% if page.profiles.odmeny %}{% include contact-line.html icon="ico--xxx bi bi-credit-card-fill" href=page.profiles.odmeny caption="Příjmy z veřejných zdrojů" %}{% endif %}
+          {% if page.profiles.odmeny %}{% include contact-line.html icon="ico--xxx bi bi-credit-card-fill" href=page.profiles.odmeny caption="Příjmy z veřejných financí" %}{% endif %}
           {% if page.profiles.evidence %}{% include contact-line.html icon="ico--xxx bi bi-people-fill" href=page.profiles.evidence caption="Evidence kontaktů a schůzek" %}{% endif %}
         </div>
       {% endif %}
@@ -67,7 +67,7 @@
 
   {% if page.asistenti %}
     <hr />
-    <h2>Asistenti</h2>
+    <h1 class="head-alt-sm">Asistenti/h1>
     <div class="space-y-4 mt-4">
       {% for asistent in page.asistenti %}
         {% include people/profile-badge.html class="badge--condensed" item=asistent description=asistent.position hideAvatar=true %}
@@ -78,7 +78,7 @@
   {% if page.office %}
     <hr />
     {% assign kancl = page.office | first %}
-    <h2>Kancelář</h2>
+    <h1 class="head-alt-sm">Kancelář</h1>
     <iframe
       height="150"
       frameborder="0"
