--- a/_includes/right-bar/bar_profile.html
+++ b/_includes/right-bar/bar_profile.html
@@ -56,7 +56,7 @@
       {% endif %}
       {% if page.profiles.odmeny or page.profiles.evidence or page.profiles.report %}
         <div>
-          <h1 class="head-alt-xs">Pirátské přehledy/h1>
+          <h1 class="head-alt-xs">Pirátské přehledy</h1>
           {% if page.profiles.kalendar %}{% include contact-line.html icon="ico--calendar" href=page.profiles.kalendar caption="Otevřený kalendář" %}{% endif %}
           {% if page.profiles.odmeny %}{% include contact-line.html icon="ico--xxx bi bi-credit-card-fill" href=page.profiles.odmeny caption="Příjmy z veřejných financí" %}{% endif %}
           {% if page.profiles.evidence %}{% include contact-line.html icon="ico--xxx bi bi-people-fill" href=page.profiles.evidence caption="Evidence kontaktů a schůzek" %}{% endif %}
