--- a/_includes/right-bar/bar_profile.html
+++ b/_includes/right-bar/bar_profile.html
@@ -19,19 +19,19 @@
   {% if page.partyUid %}{% include party.html uid=page.partyUid %}{% endif %}
   {% if page.funkce-strana %}
   <hr />
-  <div class="mt-4">
-     <h1 class="head-alt-2xs">Stranické funkce</h1>
+  <div>
+    <h1 class="head-alt-2xs">Stranické funkce</h1>
     {% for funkce-strana in page.funkce-strana %}
-      {% include contact-line.html icon="ico--xxx bi bi-rocket-takeoff" caption=funkce-strana %}
+    {% include contact-line.html icon="ico--xxx bi bi-rocket-takeoff" caption=funkce-strana %}
     {% endfor %}
   </div>
   {% endif %}
   <br/>
   {% if page.funkce-verejne %}
   <div class="mt-4">
-     <h1 class="head-alt-2xs">Veřejné funkce</h1>
+    <h1 class="head-alt-2xs">Veřejné funkce</h1>
     {% for funkce-verejne in page.funkce-verejne %}
-      {% include contact-line.html icon="ico--xxx bi bi-rocket-takeoff" caption=funkce-verejne %}
+    {% include contact-line.html icon="ico--xxx bi bi-rocket-takeoff" caption=funkce-verejne %}
     {% endfor %}
   </div>
   {% endif %}
