--- a/_includes/right-bar/bar_profile.html
+++ b/_includes/right-bar/bar_profile.html
@@ -19,7 +19,7 @@
   {% if page.partyUid %}{% include party.html uid=page.partyUid %}{% endif %}
   {% if page.funkce-strana %}
   <hr />
-  <div>
+  <div class="mt-4">
     <h1 class="head-alt-2xs">Stranické funkce</h1>
     {% for funkce-strana in page.funkce-strana %}
     {% include contact-line.html icon="ico--xxx bi bi-rocket-takeoff" caption=funkce-strana %}
